# SMS

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-and-test.yml  ubuntu.yml
cmake/modules/: FindGUROBI.cmake
include/sms/auxiliary/: active_elements.hpp  bipartition.hpp  chrono_io.hpp  cl_parser.hpp  gray_code.hpp  math.hpp  mqlib.hpp  scip.hpp  scip_exception.hpp  statistics.hpp  subset_enumerator.hpp  union_find.hpp
include/sms/branch/: branchrule_degree.hpp  branchrule_nm.hpp
include/sms/conshdlr/: cliques.hpp  conshdlr_cliques.hpp  conshdlr_holes.hpp  conshdlr_oscw.hpp  conshdlr_triangles.hpp  holes.hpp  maximal_cliques.hpp  odd_cycles.hpp  triangles.hpp
include/sms/disp/: disp.hpp
include/sms/eventhdlr/: eventhdlr_history.hpp  eventhdlr_root.hpp
include/sms/graph/: biconnected_partition.hpp  bipartite.hpp  compact_graph.hpp  dinic.hpp  fast_vertex_separators.hpp  gomory_hu_tree.hpp  graphs.hpp  graphs_statistics.hpp  gridded_ising_ccs.hpp  mst_heuristic.hpp  ocw_seperator.hpp  odd_closed_walk.hpp  small_ccs.hpp  two_separator.hpp
include/sms/instance/: convert.hpp  frustration_index.hpp  gridded_ising.hpp  ising.hpp  maxcut.hpp  mc_solution.hpp  qubo.hpp  qubo_solution.hpp
include/sms/io/: dimacs_reader.hpp  io.hpp  ising_reader.hpp  json.hpp  mc_read_write.hpp  qplib_parser.hpp
include/sms/pheur/: burer_heurisitic.hpp  kl_heuristic.hpp  pheur_burer.hpp  pheur_kl.hpp  pheur_mqlib.hpp  pheur_mst.hpp
include/sms/presol/: data_reducer_mc.hpp  presolver_mc.hpp
include/sms/probdata/: mc_edges.hpp  mc_edges_only.hpp  mc_rooted.hpp  prob_data_mc.hpp
include/sms/solver/: abstract_solver.hpp  basic_ocw.hpp  enumeration_solver.hpp  enumeration_solver_gray.hpp  gurobi_quadratic_solver.hpp  heuristic_solver.hpp  special_structures_solver.hpp
micro_benchmark/: CMakeLists.txt  cache.cpp  qubo_evaluation.cpp
params/: branchDegreeStatic.param  branchPscost.param  branchRelpscost.param  consNoHoles.param  consSmallCliquesOnly.param  heurScipOnly.param
src/auxiliary/: bipartition.cpp  chrono_io.cpp  cl_parser.cpp  mqlib.cpp  scip.cpp  subset_enumerator.cpp  union_find.cpp
src/auxiliary/test/: CMakeLists.txt  active_elements_gtest.cpp  chrono_io_gtest.cpp  gray_code_gtest.cpp  math_gtest.cpp  statistics_gtest.cpp  subset_enumerator_gtest.cpp  union_find_gtest.cpp
src/branch/: branchrule_degree.cpp  branchrule_nm.cpp
src/conshdlr/: cliques.cpp  conshdlr_cliques.cpp  conshdlr_holes.cpp  conshdlr_oscw.cpp  conshdlr_triangles.cpp  maximal_cliques.cpp
src/conshdlr/test/: CMakeLists.txt  cliques_gtest.cpp  holes_gtest.cpp  triangles_gtest.cpp
src/disp/: disp.cpp
src/eventhdlr/: eventhdlr_history.cpp  eventhdlr_root.cpp
src/graph/: biconnected_partition.cpp  bipartite.cpp  compact_graph.cpp  dinic.cpp  fast_vertex_separator.cpp  gomory_hu_tree.cpp  graphs.cpp  graphs_statistics.cpp  gridded_ising_ccs.cpp  mst_heuristic.cpp  ocw_seperator.cpp  odd_closed_walk.cpp  small_ccs.cpp  two_separator.cpp
src/graph/test/: CMakeLists.txt  biconnected_partition_gtest.cpp  bipartite_gtest.cpp  compact_graph_gtest.cpp  dinic_gtest.cpp  fast_vertex_separator_gtest.cpp  gomory_hu_tree_gtest.cpp  graph_statistics_gtest.cpp  graphs_gtest.cpp  gridded_ising_ccs_gtest.cpp  mst_heuristic_gtest.cpp  ocw_separator_gtest.cpp  odd_closed_walk_gtest.cpp  small_ccs_gtest.cpp  two_separator_gtest.cpp
src/instance/: convert.cpp  frustration_index.cpp  gridded_ising.cpp  ising.cpp  maxcut.cpp  mc_solution.cpp  qubo.cpp  qubo_solution.cpp
src/instance/test/: CMakeLists.txt  convert_gtest.cpp  frustration_index_gtest.cpp  gridded_ising_gtest.cpp  ising_gtest.cpp  maxcut_gtest.cpp  mc_solution_gtest.cpp  qubo_gtest.cpp  qubo_solution_gtest.cpp
src/io/: dimacs_reader.cpp  io.cpp  ising_reader.cpp  json.cpp  mc_read_write.cpp  qplib_parser.cpp
src/io/test/: CMakeLists.txt  dimacs_reader_gtest.cpp  io_gtest.cpp  ising_reader_gtest.cpp  mc_read_write_gtest.cpp  qplib_parser_gtest.cpp
src/mains/: checks.cpp  main.cpp
src/pheur/: burer_heuristic.cpp  kl_heuristic.cpp  pheur_burer.cpp  pheur_kl.cpp  pheur_mqlib.cpp  pheur_mst.cpp
src/pheur/test/: CMakeLists.txt  kl_heuristic_gtest.cpp
src/presol/: data_reducer_mc.cpp  presolver_mc.cpp
src/presol/test/: CMakeLists.txt  data_reducer_mc_gtest.cpp  presolver_mc_gtest.cpp
src/probdata/: mc_edges_only.cpp  mc_rooted.cpp  prop_data_mc.cpp
src/probdata/test/: CMakeLists.txt  prob_data_mc_gtest.cpp  probdata_mc_rooted_gtest.cpp
src/solver/: abstract_solver.cpp  basic_ocw.cpp  enumeration_solver.cpp  enumeration_solver_gray.cpp  gurobi_quadratic_solver.cpp  heuristic_solver.cpp  special_structures_solver.cpp
src/solver/test/: CMakeLists.txt  enumeration_solver_gray_gtest.cpp  enumeration_solver_gtest.cpp  gurobi_quadratic_solver_gtest.cpp  heuristic_solver_gtest.cpp  special_structures_solver_gtets.cpp
test/data/: QPLIB_3506.qplib  cliques-1.mc  cliques-2.mc  grid2d.mc  imgseg_105019.txt  imgseg_106025.txt  imgseg_271031.txt  imgseg_35058.txt  imgseg_374020.mc  nonGrid2d.mc  qubo_solution_test.json  qubo_solution_test_double_definition.json  qubo_solution_test_double_empty.json  qubo_solution_test_empty_0.json  qubo_solution_test_empty_1.json  simpleGrid_non_periodic.gsg  simple_qplib.qplib  simple_qplib_max.qplib  square.bq  t3g7_6666.mc  t3g7_6666_no_grid.mc  t3g7_6666_random_label.mc  three.bq
wiki/: cutting.md  heuristics.md  mqlib_graphs.md  qplib_fileformat.md
